phish-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phish-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phish-app
  template:
    metadata:
      labels:
        app: phish-app
    spec:
      containers:
      - name: phish-app
        image: 871927043079.dkr.ecr.us-east-1.amazonaws.com/kubeflow:latest
	imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: phish-app-service
spec:
  selector:
    app: phish-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
